--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             <article class="main__popular">popular</article>
             <article class="main__models">models</article>
             <div class="main__watch">
-                <a class="main__box ">
+                <a href="#" class="main__box ">
                 </a>
                 <h2 class="main__name"><a href="#">Son22</a></h2>
                 <p class="main__discription">The watch also features a tough and durable sapphire crystal glass and comes with a Swiss SW200-1 automatic winding movement that has a power reserve.</p>
             </div>
             <div class="main__watch ">
-                <div class="main__box box-2"></div>
-                <h2 class="main__name"><a href="#">Sw12</a></h2>
+                <a href="#" class="main__box box-2"></a>
+                <h2 class="main__name"><a href="#"></a></h2>
                 <p class="main__discription">The watch also features a tough and durable sapphire crystal glass and comes with a Sw12-1 automatic winding</p>
             </div>
             <div class="product">
