--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="main__watch ">
                 <a href="#" class="main__box box-2"></a>
-                <h2 class="main__name"><a href="#"></a></h2>
+                <h2 class="main__name"><a href="#"></a>Sw12</h2>
                 <p class="main__discription">The watch also features a tough and durable sapphire crystal glass and comes with a Sw12-1 automatic winding</p>
             </div>
             <div class="product">
